--- a/openApiDocs/beta/Bookings.yml
+++ b/openApiDocs/beta/Bookings.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.4
 info:
   title: Bookings
   version: v1.0-beta
@@ -14675,6 +14675,8 @@ components:
               type: string
               description: The unique identifier of the protection policy based on which protection unit was created.
               nullable: true
+            protectionSources:
+              $ref: '#/components/schemas/microsoft.graph.protectionSource'
             status:
               $ref: '#/components/schemas/microsoft.graph.protectionUnitStatus'
           additionalProperties:
@@ -15273,7 +15275,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.publicError'
             isAutoApplyEnabled:
               type: boolean
-              description: 'true indicates that the protection rule is dynamic; false that it''s static. Currently, only static rules are supported.'
+              description: true indicates that the protection rule is dynamic; false that it's static.
               nullable: true
             lastModifiedBy:
               $ref: '#/components/schemas/microsoft.graph.identitySet'
@@ -15456,6 +15458,16 @@ components:
         - active
         - unknownFutureValue
       type: string
+    microsoft.graph.protectionSource:
+      title: protectionSource
+      enum:
+        - none
+        - manual
+        - dynamicRule
+        - unknownFutureValue
+      type: string
+      x-ms-enum-flags:
+        isFlags: true
     microsoft.graph.protectionUnitStatus:
       title: protectionUnitStatus
       enum:
@@ -15726,6 +15738,8 @@ components:
         - completed
         - completedWithErrors
         - unknownFutureValue
+        - updateRequested
+        - deleteRequested
       type: string
     microsoft.graph.protectionUnitsBulkJobStatus:
       title: protectionUnitsBulkJobStatus
