--- a/openApiDocs/beta/DeviceManagement.Functions.yml
+++ b/openApiDocs/beta/DeviceManagement.Functions.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.4
 info:
   title: DeviceManagement.Functions
   version: v1.0-beta
@@ -597,6 +597,13 @@ components:
             isBuiltIn:
               type: boolean
               description: Description of the Role Scope Tag. This property is read-only.
+              readOnly: true
+            permissions:
+              type: array
+              items:
+                type: string
+                nullable: true
+              description: Permissions associated with the Role Scope Tag. This property is read-only.
               readOnly: true
             assignments:
               type: array
