Moved script to postgeneration folder

--- a/.azure-pipelines/generation-templates/generate-command-metadata.yml
+++ b/.azure-pipelines/generation-templates/generate-command-metadata.yml
@@ -9,6 +9,14 @@ steps:
       pwsh: true
       script: |
         . $(System.DefaultWorkingDirectory)/tools/PostGeneration/NewCommandMetadata.ps1 -SourcePath "$(System.DefaultWorkingDirectory)/src/" -IncludePermissions -Debug
+        - task: PowerShell@2
+  - task: PowerShell@2
+    displayName: Generate authentication module metadata
+    inputs:
+      targetType: inline
+      pwsh: true
+      script: |
+        . $(System.DefaultWorkingDirectory)/tools/PostGeneration/AuthModuleMetadata.ps1
 
   - task: Bash@3
     displayName: Push command metadata
